more greek translations

--- a/app/views/mailman/send_activation_code.gr.text.erb
+++ b/app/views/mailman/send_activation_code.gr.text.erb
@@ -1,4 +1,6 @@
-Somebody (probably you) has requested to send an e-mail to the members of the European Parliament. Please confirm it following this link:
+Κάποιος (πιθανότατα εσείς) ζήτησε να αποσταλεί ένα ηλεκτρονικό μήνυμα
+στα μέλη του Ευρωπαικού κοινοβουλίου. Παρακαλώ επιβεβαιώστε
+ακολουθόντας τον σύνδεσμο:
 
 <%= "http://#{APP_CONFIG[:domain]}/activate/#{@activation_code}" %>
 
