--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
         <li><a href="<%= url_for :locale => 'da' %>">Dansk</a></li>
         <li><a href="<%= url_for :locale => 'de' %>">Deutsch</a></li>
         <li><a href="<%= url_for :locale => 'es' %>">Español</a></li>
+        <li><a href="<%= url_for :locale => 'eus' %>">Euskara</a></li>
         <li><a href="<%= url_for :locale => 'en' %>">English</a></li>
         <li><a href="<%= url_for :locale => 'fr' %>">Français</a></li>
         <li><a href="<%= url_for :locale => 'gr' %>">Ελληνικά</a></li>
