favicon movido al directorio de imagenes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <title><%= @title %> - <%= APP_CONFIG[:project_name] %></title>
     <%= stylesheet_link_tag 'style', :media => 'all' %>
     <%= csrf_meta_tag %>
-    <link rel="shortcut icon" type="image/x-png" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-png" href="/images/favicon.ico" />
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-19618497-1']);
