--- a/app/views/site/index.de.html.erb
+++ b/app/views/site/index.de.html.erb
@@ -3,63 +3,56 @@
 <h2><%= link_to t(:introduction), root_url %></h2>
 
 <p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" />
-<%= link_to "Durch das Ausfüllung dieses Formulars", message_path %>, schicken Sie eine E-Mail an Ihrem Land
-Vertreter im Europäischen Parlament in Ihrer eigenen Sprache. Bitte schreiben
-Sie mit Respekt und Klarheit. Das Ziel dieses Programm ist jeder Abgeordnete
-mit einer einzigartigen Nachricht selbst geschrieben zu erreichen (also nicht
-mit "Copy &amp; Paste").</p>
+<%= link_to "Wenn Sie dieses Formular ausfüllen", message_path %>, schicken Sie eine deutsche E-Mail an die
+Vertreter Ihres Landes im europäischen Parlament. Bitte halten
+Sie Ihre Nachricht respektvoll und klar verständlich. Das Ziel dieses Programms ist es, jedem und jeder Abgeordneten eine einzigartige, von Ihnen selbst geschriebene Nachricht zukommen zu lassen (also kein "Copy &amp; Paste" oder ähnliches).</p>
 
-<p>Am 10. Oktober begann über 20.000 Sahrauis eine große friedlichen Protest für
-ihrem Recht auf Arbeit nicht diskriminiert zu werden, und die Nutzung ihrer
-natürlichen Ressourcen zurückzugewinnen durch die Errichtung eines Lagers von
-7000 haimas 15 km von El Aaiún (Laayoune, Kapital der Westsahara).</p>
+<p>Am 10. Oktober nahmen über 20.000 Sahrauis an einer großen, friedlichen Protestkundgebung teil. Sie demonstrierten für
+ihr Recht auf Arbeit, gegen Diskriminierung, und um die Nutzungsrechte für ihre
+natürlichen Ressourcen zurückzugewinnen, indem sie 15 km von El Aaiún (Laayoune, Hauptstadt der Westsahara) ein Lager
+aus 7000 haimas errichteten.</p>
 
-<p>30 Tage später schickte der marokkanischen Regierung seine Armee den
-saharauischen Lager Agdaym Iziken anzugreifen und zu vernichten. 28 Menschen
-wurden getötet, 723 wurden verletzt und 159 fehlen nicht mitgerechnet
-Zivilisten ins Gefängnis, Krankenhäusern und Militärlagern geschickt.</p>
+<p>30 Tage später sandte die marokkanische Regierung die Armee aus, die das
+saharauische Lager Agdaym Iziken angriff und zerstörte. 28 Menschen
+wurden getötet, 723 wurden verletzt und 159 verschwanden spurlos, jene Zivilisten nicht mitgerechnet,
+die ins Gefängnis, in Krankenhäusern und Militärlager wanderten.</p>
 
 <p>Gleichzeitig haben die Besatzungstruppen von Marokko Siedler in der Stadt El
-Aaiún gefördert und bewaffnet, die gemeinsam mit Polizisten in Zivil, in Häuser
-brach und Geschäfte und Fahrzeuge der saharauischen Bürger verbrannte. Die
-Marokko Armee hat einen Zustand des Kriegsrechts in den besetzten Gebieten der
-Westsahara erklärte.</p>
+Aaiún bewaffnet und gemeinsam mit Polizisten in Zivil dazu angestachelt, in Häuser
+und Geschäfte einzubrechen und Fahrzeuge der saharauischen Bürger zu verbrennen. Die
+marokkanische Armee hat das Kriegsrechts über die besetzten Gebiete der
+Westsahara verhängt.</p>
 
-<p>Schweigen ist keine Option, und es gibt keinen Weg der Zugriffe des Volkes des
-Westsaharas zu stoppen. Auf der anderen Seite gibt es eine Möglichkeit die, die
-unter Unterdrückung leben, von Leiden zu schützen. Dies ist der Grund, warum
-wir dieses Tool erstellt haben, zu übertragen durch alle Möglichkeiten, die
-allgemeine Forderung nach Gerechtigkeit, Würde und Respekt für das Leben derer,
-die heute von professionellen und paramilitärischen Kräfte auf den Straßen von
-El Aaiún verfolgt sind. Gemeinsam können wir, mit diesem Tool, zu verlangen
-arbeiten, damit dem Europaparlament gegen diese Handlungen protestiert.</p>
+<p>Schweigen ist nicht länger eine Option, die Anliegen des Volkes der
+Westsahara dürfen nicht länger ignoriert werden. Es gibt durchaus eine Möglichkeit, sich für die Menschen einzusetzen, die
+dort unterdrückt werden. Aus diesem Grund haben wir dieses Tool erstellt - um der allgemeinen Forderung nach Gerechtigkeit, Würde und Respekt für das Leben derer,
+die zur Zeit von militärischen und paramilitärischen Streitkräften auf den Straßen von
+El Aaiún verfolgt werden, Ausdruck zu verleihen. Gemeinsam können wir, mit Hilfe dieses Tools, zusammenarbeiten um zu erreichen, dass das Europaparlament gegen diese Handlungen formell protestiert.</p>
 
-<p>Vorschläge bei der Ausarbeitung Ihrer Nachricht zu betrachten sind:
+<p>Vorschläge zum möglichen Inhalt Ihrer Nachricht:
    <ul>
-      <li>Erklären Sie kurz mit eigenen Worten, was passiert, sagen Sie ihnen, wie
-          Sie sich fühlen und was sie in Ihrem Namen machen sollen.</li>
-      <li>Fordern Sie sie auf Nachfrage, dass die marokkanische Regierung mit
+      <li>Erklären Sie kurz mit eigenen Worten, was geschieht. Führen Sie aus, was
+          Sie darüber denken und was in Ihrem Namen dagegen unternommen werden sollte.</li>
+      <li>Verlangen Sie, dass die marokkanische Regierung aufgefordert wird, die
           Gewalt gegen die saharauischen Bevölkerung in den besetzten Gebieten der
-          Westsahara aufhört.</li>
-      <li>Sagen Sie ihnen, in Ihren eigenen Worten, dass die UN Maßnahmen der
+          Westsahara einzustellen.</li>
+      <li>Sagen Sie ihnen, in Ihren eigenen Worten, dass die Vereinten Nationen Maßnahmen zur
           Durchsetzung von Artikel 2 der Allgemeinen Erklärung der Menschenrechte sowie
-          die Beschlüsse für die nicht-selbstverwalteten Gebiete der Sahara erlassen
-          auferlegen muss.</li>
-      <li>Erklären Sie ihnen, sie sollten die UN zu bitten, den Sicherheitsrat
-          MINURSO die Fähigkeit zu gewähren, Menschen Rechte zu überwachen und berichtet
-          direkt an den UN-Sicherheitsrat zu haben.</li>
-      <li>Erinnern Sie sie, dass die UN eine Verpflichtung, der Bevölkerung von
-          nicht-selbstverwalteten Gebiete, während sie auf ein Referendum über die
-          Selbstbestimmung warten, in Übereinstimmung mit den Resolutionen des
-          UN-Generalversammlung, Sicherheitsrat der Vereinten Nationen und der
-          Afrikanischen Union, zu schützen habt.</li>
-      <li>Bitten Sie sie, ihre Stimme zu erheben, um die Zivilisten als
-          Menschenrechtsbeobachter sowie freien Zugang zum Pressebereich zu handeln.</li>
-      <li>Verlangen, dass sie vor dem Europäischen Parlament standen und darum
-          bitten, ihnen in den Konflikt einzugreifen, sowie immer wieder die gleichen von
-          der internationalen Gemeinschaft.</li>
+          der Beschlüsse für die nicht-selbstverwalteten Gebiete der Sahara ergreifen müssen.</li>
+      <li>Fordern Sie sie auf, den Sicherheitsrat der Vereinten Nationen zu bitten, MINURSO zu erlauben, die Menschenrechte zu überwachen 
+          und Berichte direkt an den UNO-Sicherheitsrat zu leiten.</li>
+      <li>Erinnern Sie sie daran, dass die UNO verpflichtet ist, die Bevölkerung der
+          nicht-selbstverwalteten Gebiete zu schützen während sie auf ein Referendum über die
+          Selbstbestimmung warten; dies in Übereinstimmung mit weiteren Resolutionen der
+          UN-Generalversammlung, des Sicherheitsrat der Vereinten Nationen und der
+          Afrikanischen Union.</li>
+      <li>Bitten Sie sie, ihre Stimme zu erheben, um Zivilisten als
+          Menschenrechtsbeobachter zu erlauben sowie freien Zugang zur Presse zu gewährleisten.</li>
+      <li>Verlangen Sie, dass sie das Thema im europäischen Parlament zur Sprache bringen und darum
+          bitten, dass das Parlament zum Konflikt Stellung bezieht. Verlangen Sie auch, dass sie dasselbe vor
+          der internationalen Gemeinschaft tun.</li>
       <li>Bitten Sie sie, die sofortige Freilassung der rechtswidrig festgehaltenen
-          saharauischen. Es gibt Hunderte von Menschen als vermisst gemeldet oder
-          verhaftet.</li>
+          saharauischen Bürger zu beantragen. Es sind weiterhin Hunderte von Menschen als vermisst gemeldet oder
+          in Haft.</li>
    </ul>
 </p>
