--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,18 +43,8 @@
     </ul>
     <ul class="nav_right">
       <li>
-        <!-- AddThis Button BEGIN -->
-          <div class="addthis_toolbox addthis_default_style">
-            <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet"></a>
-          </div>
-          <script type="text/javascript">
-            var addthis_config = {"data_track_clickback":true};
-          </script>
-          <script type="text/javascript"
-            src="http://s7.addthis.com/js/250/addthis_widget.js#username=isaachacksimov">
-          </script>
-        <!-- AddThis Button END -->
+				<a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>	
+        <iframe src="http://www.facebook.com/plugins/like.php?href=<?php the_permalink() ?>&amp;layout=button_count&amp;show_faces=false&amp;width=120&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
       </li>
     </ul>
     <div class="clear" />
