Traduccion al gallego

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
         <li><a href="<%= url_for :locale => 'eus' %>">Euskara</a></li>
         <li><a href="<%= url_for :locale => 'en' %>">English</a></li>
         <li><a href="<%= url_for :locale => 'fr' %>">Français</a></li>
+        <li><a href="<%= url_for :locale => 'gl' %>">Galego</a></li>
         <li><a href="<%= url_for :locale => 'gr' %>">Ελληνικά</a></li>
         <li><a href="<%= url_for :locale => 'it' %>">Italiano</a></li>
       </ul>
