--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
         <li><a href="<%= url_for :locale => 'de' %>">Deutsch</a></li>
         <li><a href="<%= url_for :locale => 'es' %>">Español</a></li>
         <li><a href="<%= url_for :locale => 'eus' %>">Euskara</a></li>
-        <li><a href="<%= url_for :locale => 'en' %>">English</a></li>
+        <li><a href="<%= url_for :locale => 'en' %>">English</a></li><br />
         <li><a href="<%= url_for :locale => 'fr' %>">Français</a></li>
         <li><a href="<%= url_for :locale => 'gl' %>">Galego</a></li>
         <li><a href="<%= url_for :locale => 'gr' %>">Ελληνικά</a></li>
