Actualizando traducion al eusquera

--- a/app/views/mailman/send_activation_code.eus.text.erb
+++ b/app/views/mailman/send_activation_code.eus.text.erb
@@ -1,4 +1,5 @@
-Alguien (probablemente tú) has solicitado el envio de un email a los miembros del Parlamento Europeo. Por favor, confirmalo siguiendo este enlace:
+Norbaitek (seguru asko zuk) Europar Legebiltzarrera mezu bat
+bidatzea eskatu du. Mesedez, berretsi ezazu ondoko esteka jarraituz:
 
 <%= "http://#{APP_CONFIG[:domain]}/activate/#{@activation_code}" %>
 
