página de estadísticas implementada con algunas traducciones

--- a/app/views/pages/stats.cat.html.erb
+++ b/app/views/pages/stats.cat.html.erb
@@ -3,3 +3,5 @@
 <h2><%= link_to t(:stats), stats_path %></h2>
 
 <p>Estamos trabajando en poder ofrecer las estadísticas en tiempo real.</p>
+
+<p>En aquests moments <%= @senders %> ciutadans i ciutadanes de la Unió Europea han enviat el seu missatge als nostres representants, el que fa un total de <%= @messages %> missatges lliurats al Parlament Europeu.</p>
