--- a/app/views/pages/stats.es.html.erb
+++ b/app/views/pages/stats.es.html.erb
@@ -2,4 +2,4 @@
 
 <h2><%= link_to t(:stats), stats_path %></h2>
 
-<p>En estos momentos <%= @senders %> ciudadanos y ciudadanas de la Unión Europea han enviado su mensaje a nuestros representantes en el Parlamento Europeo.</p>
+<p>En estos momentos <%= @senders %> ciudadanos y ciudadanas de la Unión Europea han enviado su mensaje a nuestros representantes. Lo que hace un total de <%= @messages %> mensajes entregados al Parlamento Europeo.</p>
