--- a/app/views/pages/stats.gl.html.erb
+++ b/app/views/pages/stats.gl.html.erb
@@ -2,4 +2,6 @@
 
 <h2><%= link_to t(:stats), stats_path %></h2>
 
-<p>Estamos trabajando en poder ofrecer las estadísticas en tiempo real.</p>
+<p>We are working to offer real-time statistics.</p>
+
+<p>Right now, <%= @senders %> European Union citizens have already sent their message to our representatives. That sums up <%= @messages %> messages delivered to the European Parliament.</a>
