--- a/app/views/pages/stats.eus.html.erb
+++ b/app/views/pages/stats.eus.html.erb
@@ -2,6 +2,4 @@
 
 <h2><%= link_to t(:stats), stats_path %></h2>
 
-<p>We are working to offer real-time statistics.</p>
-
-<p>Right now, <%= @senders %> European Union citizens have already sent their message to our representatives. That sums up <%= @messages %> messages delivered to the European Parliament.</a>
+<p>En estos momentos <%= @senders %> ciudadanos y ciudadanas de la Unión Europea han enviado su mensaje a nuestros representantes. Lo que hace un total de <%= @messages %> mensajes entregados al Parlamento Europeo.</p>
