Translations for the stats

--- a/app/views/pages/stats.gr.html.erb
+++ b/app/views/pages/stats.gr.html.erb
@@ -2,6 +2,6 @@
 
 <h2><%= link_to t(:stats), stats_path %></h2>
 
-<p>We are working to offer real-time statistics.</p>
-
-<p>Right now, <%= @senders %> European Union citizens have already sent their message to our representatives. That sums up <%= @messages %> messages delivered to the European Parliament.</a>
+<p>Αυτήν τη στιγμή, <%= @senders %> πολίτες της ευρωπαικής ένωσης έχουν ήδη στείλει
+το μήνυμά στους αντιπροσώπους τους. Αυτό ισοδυναμεί με <%= @messages %> μηνύματα
+προς το Ευρωπαικό κοινοβούλιο.</p>
