--- a/app/views/pages/stats.pl.html.erb
+++ b/app/views/pages/stats.pl.html.erb
@@ -2,4 +2,7 @@
 
 <h2><%= link_to t(:stats), stats_path %></h2>
 
-<p>Right now, <%= @senders %> European Union citizens have already sent their message to our representatives. That sums up <%= @messages %> messages delivered to the European Parliament.</a>
+<p>
+Do tej pory już <%= @senders %> obywateli Unii Europejskiej wysłało wiadomość do swoich
+reprezentantów. W sumie do  Parlamentu Europejskiego zostało wysłanych <%= @messages %>
+wiadomości.</p>
