Make clear that users have to check their mail

--- a/app/views/mailman/send_activation_code.es.text.erb
+++ b/app/views/mailman/send_activation_code.es.text.erb
@@ -2,3 +2,6 @@ Alguien (probablemente tú) has solicitado el envio de un email a los miembros d
 
 <%= "http://#{APP_CONFIG[:domain]}/activate/#{@activation_code}" %>
 
+¡Hasta que no lo confirmes, no se enviará el mensaje!
+
+Si no has sido tú quien lo ha solicitado, puedes ignorar este mensaje.
