--- a/app/views/mailman/send_activation_code.en.text.erb
+++ b/app/views/mailman/send_activation_code.en.text.erb
@@ -1,4 +1,8 @@
-Somebody (probably you) has requested to send an e-mail to the members of the European Parliament. Please confirm it following this link:
+Somebody (probably you) has requested to send an e-mail to members of the European Parliament. Please confirm it following this link:
 
 <%= "http://#{APP_CONFIG[:domain]}/activate/#{@activation_code}" %>
+
+Please notice that the message will *not* be sent until your confirm it!
+
+If it wasn't you who requested it, you can ignore this mail.
 
