--- a/app/views/pages/stats.eus.html.erb
+++ b/app/views/pages/stats.eus.html.erb
@@ -2,4 +2,6 @@
 
 <h2><%= link_to t(:stats), stats_path %></h2>
 
-<p>En estos momentos <%= @senders %> ciudadanos y ciudadanas de la Unión Europea han enviado su mensaje a nuestros representantes. Lo que hace un total de <%= @messages %> mensajes entregados al Parlamento Europeo.</p>
+<p>Europear Batasuneko gure ordezkariei mementu honetan, <%= @senders %> europear
+herritar bere mezua bidali diete. Guztira Europear legebiltzarrean <%= @messages %>
+mezu entregatu dira.</p>
