--- a/app/views/pages/stats.gl.html.erb
+++ b/app/views/pages/stats.gl.html.erb
@@ -2,4 +2,5 @@
 
 <h2><%= link_to t(:stats), stats_path %></h2>
 
-<p>En estos momentos <%= @senders %> ciudadanos y ciudadanas de la Unión Europea han enviado su mensaje a nuestros representantes. Lo que hace un total de <%= @messages %> mensajes entregados al Parlamento Europeo.</p>
+<p>Nestes momentos <%= @senders %> cidadáns e cidadás da Unión Europea teñen enviado a
+sua mensaxe os nosos representantes.O que fai un total de <%= @messages %> mensaxes
