Fixed a missed line.

--- a/app/views/pages/stats.gl.html.erb
+++ b/app/views/pages/stats.gl.html.erb
@@ -4,3 +4,4 @@
 
 <p>Nestes momentos <%= @senders %> cidadáns e cidadás da Unión Europea teñen enviado a
 sua mensaxe os nosos representantes.O que fai un total de <%= @messages %> mensaxes
+entregadas no Parlamento Europeo</p>
