--- a/app/views/pages/stats.fr.html.erb
+++ b/app/views/pages/stats.fr.html.erb
@@ -2,4 +2,6 @@
 
 <h2><%= link_to t(:stats), stats_path %></h2>
 
-<p>Right now, <%= @senders %> European Union citizens have already sent their message to our representatives. That sums up <%= @messages %> messages delivered to the European Parliament.</a>
+<p>Maintenant <%= @senders %> citoyens et citoyennes de l'Union Européenne
+ont envoyés leur messages a nôtres représentants. Un total de <%= @messages %>
+messages sont arrivés au Parlement Européen.</p>
