--- a/app/views/pages/stats.it.html.erb
+++ b/app/views/pages/stats.it.html.erb
@@ -2,4 +2,6 @@
 
 <h2><%= link_to t(:stats), stats_path %></h2>
 
-<p>Right now, <%= @senders %> European Union citizens have already sent their message to our representatives. That sums up <%= @messages %> messages delivered to the European Parliament.</p>
+<p>Adesso <%= @senders %> cittadini e cittadine della Unione Europea
+hanno inviato i loro messaggi ai nostri ripresentanti. Allora sono
+<%= @messages %> i messaggi consegnati al Parlamento Europeo.</p>
