Keep making clear the need to confirm

--- a/app/views/mailman/send_activation_code.es.text.erb
+++ b/app/views/mailman/send_activation_code.es.text.erb
@@ -1,4 +1,4 @@
-Alguien (probablemente tú) has solicitado el envio de un email a los miembros del Parlamento Europeo. Por favor, confirmalo siguiendo este enlace:
+Alguien (probablemente tú) ha solicitado el envío de un email a los miembros del Parlamento Europeo. Por favor, confírmalo siguiendo este enlace:
 
 <%= "http://#{APP_CONFIG[:domain]}/activate/#{@activation_code}" %>
 
