Update French translation

--- a/app/views/mailman/send_activation_code.fr.text.erb
+++ b/app/views/mailman/send_activation_code.fr.text.erb
@@ -1,8 +1,9 @@
-Somebody (probably you) has requested to send an e-mail to members of the European Parliament. Please confirm it following this link:
+
+Quelqu'un (vous peut-être) a sollicité l'envoi d'un mail aux membres du Parlement Européen. Confirmez, s'il vous plaît, suivant cette lien: 
 
 <%= "http://#{APP_CONFIG[:domain]}/activate/#{@activation_code}" %>
 
-Please notice that the message will *not* be sent until your confirm it!
+Si vous ne confirmez pas, le message ne sera pas envoyé!
 
-If it wasn't you who requested it, you can ignore this mail.
+Si n'est pas vous qui a sollicité, vous pouvez ignorez ce message. 
 
