Update Basque translation

--- a/app/views/mailman/send_activation_code.eus.text.erb
+++ b/app/views/mailman/send_activation_code.eus.text.erb
@@ -1,5 +1,11 @@
 Norbaitek (seguru asko zuk) Europar Legebiltzarrera mezu bat
-bidatzea eskatu du. Mesedez, berretsi ezazu ondoko esteka jarraituz:
+bidatzea eskatu du.
+
+MESEDEZ, BERRETSI EZAZU ONDOKO ESTEKA JARRAITUZ:
 
 <%= "http://#{APP_CONFIG[:domain]}/activate/#{@activation_code}" %>
+
+ZUK BERRETSI ARTE MEZUA EZ DA BIDALIKO!
+
+Mezua ez baduzu zeuk bidali ez hartu kontuan aurrekoa.
 
