--- a/app/views/message/_message_intro.eus.html.erb
+++ b/app/views/message/_message_intro.eus.html.erb
@@ -1,2 +1,4 @@
 <p id="message_intro">
-Ondoko formulario betez gero, zeure eskaerez gain, Europarlamentuko zure ordezkari guztiei mezu bat bidali ahalko diezu Marokoko Gobernuak Saharar populazioaren kontra egiten duen <%= link_to "bortizkeria gelditzeko", root_url %>. Nahi duzuna idatz dezakezu baina egizu beti errespetuz, halaxe bakarrik izango dute aukera gure eskaerak entzunak izateko.</p>
+Ondoko formulario betez gero, zeure eskaerez gain, Europarlamentuko zure ordezkari guztiei mezu bat bidali ahalko diezu Marokoko Gobernuak Saharar populazioaren kontra egiten duen <%= link_to "bortizkeria gelditzeko", root_url %>. Nahi duzuna idatz dezakezu baina egizu beti errespetuz, halaxe bakarrik izango dute aukera gure eskaerak entzunak izateko.<br /><br />
+Tu mensaje se enviará a todos los europarlamentarios del Estado Español o de Francia, por lo que, para mayor efectividad, recomendamos escribirlo en castellano o francés.</p>
+
