--- a/app/views/pages/stats.es.html.erb
+++ b/app/views/pages/stats.es.html.erb
@@ -3,3 +3,11 @@
 <h2><%= link_to t(:stats), stats_path %></h2>
 
 <p>En estos momentos <%= @senders %> ciudadanos y ciudadanas de la Unión Europea han enviado su mensaje a nuestros representantes. Lo que hace un total de <%= @messages %> mensajes entregados al Parlamento Europeo.</p>
+
+<p>Estas estadísticas sólo recogen los mensajes que han sido confirmados, 
+y consecuentemente enviados.<br />
+Si has rellenado el formulario, recuerda que <b>tu mensaje no se enviará 
+hasta que lo confirmes</b>.  Para ello sólo tienes que visitar el enlace
+que te hemos enviado por correo electrónico (si no lo ves, mira en la
+carpeta de spam).</p>
+
