Rewrite the main page to make it crystal clear

--- a/app/views/site/index.en.html.erb
+++ b/app/views/site/index.en.html.erb
@@ -2,26 +2,63 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "By filling this form", message_path %> you will send an e-mail to your country's representatives in the European Parliament in your own language. Please, write with respect and clarity. The aim of this utility is to allow you to reach every MEP with a unique message written by yourself (i.e. not using "copy&amp;paste").</p>
+<p><b>Send a message to your representatives in the European Parliament
+demanding them to make a stand immediately and require Morocco to respect 
+the rights of the Sahrawi people.</b></p>
 
-<p>On October 10th, over 20,000 sahrawis started a large peaceful protest to reclaim their right to work, not to be discriminated against, and the use of their natural resources, by establishing a camp of 7,000 haimas 15 km away from El Aaiún (Laayoune, capital of Western Sahara).</p>
+<ul>
+<li>Send <a href="http://www.sahararights.net/message">your message</a></li>
+<li><a href="http://www.sahararights.net/integrate">Integrate</a> the form in your web</li>
+</ul>
 
-<p>30 days later, the Moroccan government sent its´ army to assault and destroy the sahrawi camp of Agdaym Iziken. 28 people were killed, 723 were injured and 159 missing, not counting civilians sent to prison, hospitals and military camps.</p>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" />
+This is an emergency campaign to demand your country's MEPs to act immediately
+for the Western Sahara: <%= link_to "By filling this form", message_path %> you
+will send an e-mail to your country's representatives in the European Parliament
+in your own language.  The aim of this tool is to allow you to reach every MEP
+with a unique message written by yourself (i.e. not using "copy&amp;paste").  
+Please write in a simple and natural way, and most importantly, do it with 
+respect and clarity.  Only this way they'll listen to what you have to say.</p>
 
-<p>At the same time, the occupying forces of Morocco have encouraged and armed settlers in the city of El Aaiún, who, together with policemen in plain clothes, broke into houses, businesses, and burnt vehicles of sahrawi citizens. Morocco's army has declared a state of martial law over the Occupied Territories of Western Sahara.</p>
+<p>Once the form in submitted, your message will be sent to the email addresses
+of your country's representatives in the European Parliament.</p>
 
-<p>Silence is not an option, and there is no way to stop the fair requests of the sahrawi people. On the other hand, there is an ability to protect those suffering repression. This is the reason we have created this tool; to transmit by any means the universal demand for justice, dignity and respect for the lives of those who today are persecuted by professional and paramilitary forces on the streets of El Aaiún. Together we may, using this tool, cooperate to demand that the Europarliament protest against these acts.</p>
+<p>Besides, you can copy this chunk of
+<a href="http://www.sahararights.net/integrate">HTML code</a> and paste it
+in your web to integrate the form.  This way, we can be thousands of webs
+and blogs calling for this action.</p>
+
+<p>We have created this tool to transmit
+by every means the universal demand for justice, dignity and respect for the lives
+of those who today are persecuted by professional and paramilitary forces on the
+streets of El Aaiún.  Together we may, using this tool, cooperate to demand that
+the Europarliament protest against these acts.  If they get hundreds of thousands
+of mails, they'll have to listen to us.</p>
 
 
-<p>Proposals to be considered in the drafting of your message:
+<p>Proposals to be considered when composing your message:
    <ul>
-      <li>Explain briefly with your own words what is happening, tell them how you feel and what they should do on your behalf.</li>
-      <li>Ask them to demand that the Moroccan government to cease using violence against the Sahrawi population in the Occupied Territories of Western Sahara.</li>
-      <li>Tell them in your own words that the UN must take action by enforcing Article 2 of the Universal Declaration of Human Rights, as well as the resolutions adopted for the non-self-governing Territories of the Sahara.</li>
-      <li>Explain to them that they should ask the UN to have the Security Council grant MINURSO the ability to monitor Humans Rights, reporting directly to the UN Security Council.</li>
-      <li>Remind them that the UN has an obligation to protect the population of non-self-governing Territories whilst they await a referendum on self-determination, in accordance with the resolutions of the UN General Assembly, UN Security Council and the African Union.</li>
-      <li>Ask them to raise their voices, to allow civilians to act as human rights observers as well as free access to the press.</li>
-      <li>Demand that they stand in front of the European Parliament and ask for it to intervene in the conflict, as well as asking the same of the international community.</li>
-      <li>Ask them to demand the immediate release of illegally detained Sahrawi; there are hundreds of people reported missing or arrested.</li>
+      <li>Explain briefly with your own words what is happening, tell them how
+you feel and what they should do on your behalf.</li>
+      <li>Ask them to demand that the Moroccan government to cease using
+violence against the Sahrawi population in the Occupied Territories of Western
+Sahara.</li>
+      <li>Demand that they stand in front of the European Parliament and ask for
+it to intervene in the conflict, as well as asking the same of the international
+community.</li>
+      <li>Ask them to demand the immediate release of illegally detained
+Sahrawi; there are hundreds of people reported missing or arrested.</li>
+      <li>Tell them in your own words that the UN must take action by enforcing
+Article 2 of the Universal Declaration of Human Rights, as well as the
+resolutions adopted for the non-self-governing Territories of the Sahara.</li>
+      <li>Explain to them that they should ask the UN to have the Security
+Council grant MINURSO the ability to monitor Humans Rights, reporting directly
+to the UN Security Council.</li>
+      <li>Remind them that the UN has an obligation to protect the population of
+non-self-governing Territories whilst they await a referendum on
+self-determination, in accordance with the resolutions of the UN General
+Assembly, UN Security Council and the African Union.</li>
+      <li>Ask them to raise their voices, to allow civilians to act as human
+rights observers as well as free access to the press.</li>
    </ul>
 </p>
