--- a/app/views/site/index.es.html.erb
+++ b/app/views/site/index.es.html.erb
@@ -2,25 +2,55 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "Rellenando este formulario", message_path %> enviarás un correo a las/los representantes de tu país en el Parlamento Europeo en tu propia lengua. Por favor, hazlo con mucho respeto y claridad. El objetivo de esta herramienta es que la europarlamentaria o el europarlamentario en cuestión,  reciba un mensaje único y escrito con tus propias palabras, sin utilizar el método "copia y pega".</p>
+<p><b>Envía un mensaje a tus representantes en el Parlamento Europeo para que
+se pronuncie inmediatamente y exija a Marruecos que respete los derechos del 
+pueblo saharaui.</b></p>
 
-<p>El día diez de octubre comenzó una gran protesta pacífica, en la que más de 20.000 saharauis reivindicaban su derecho al trabajo, a la no discriminación y al usufructo de sus recursos naturales, estableciendo un campamento de 7000 haimas a 15 kilómetros de la ciudad de El Aaiún. 30 días después el gobierno de Marruecos ordenó a su ejército  el asalto y la destrucción del campamento saharaui de Agdaym Iziken. Ha habido 28 personas muertas, 723 heridas y 159 desaparecidas, sin contar a quienes se encuentran en los cuarteles militares o la cárcel, ni en los hospitales.</p>
+<ul>
+<li>Envía  <a href="http://www.sahararights.net/message">tu mensaje</a></li>
+<li><a href="http://www.sahararights.net/integrate">Integra</a> el formulario en tu web</li>
+</ul>
 
-<p>Al mismo tiempo, las fuerzas de ocupación han instigado y armado a colonos de la ciudad de El Aaiún que, junto a policías de paisano, asaltan domicilios, negocios y queman vehículos de propiedad  saharaui. El ejército marroquí ha declarado el Estado de sitio en los Territorios Ocupados del Sáhara Occidental.</p>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" />
+Esta es una campaña de emergencia para exigir a los Europarlamentarios de tu
+país que actúen inmediatamente por el Sáhara: rellenando 
+<a href="http://www.sahararights.net/message">este formulario</a> enviarás un
+correo a las/los representantes de tu país en el Parlamento Europeo en tu
+propia lengua.  El objetivo de esta herramienta es que la europarlamentaria
+o el europarlamentario en cuestión reciba un mensaje único y escrito con tus
+propias palabras, sin utilizar el método "copia y pega". Escribe de manera
+sencilla y natural y sobre todo, por favor, hazlo con mucho respeto y claridad,
+sólo así nos harán caso.</p>
 
-<p>No existe la opción del silencio como no existe la posibilidad de parar las justas demandas del pueblo saharaui. Lo que sí existe es la posibilidad de proteger a quienes están sufriendo represión. Por ello hemos creado esta herramienta, para transmitir por todos los canales posibles la demanda universal de justicia, dignidad y respeto por la vida de quienes hoy son perseguidas por militares profesionales y cuadrillas paramilitares a través de las calles de El Aaiún. Entre todas las que usemos esta herramienta podemos colaborar para exigir al Europarlamento que se pronuncie.</p>
+<p>Una vez rellenado el formulario, tu texto será enviado a las cuentas de
+correo de los/as representantes de tu país en el Parlamento Europeo.</p>
+
+<p>También puedes copiar este pequeño 
+<a href="http://www.sahararights.net/integrate">código HTML</a> y pegarlo en
+tu web para integrar el formulario, para que seamos miles de webs y blogs
+solicitando el envío.</p>
+
+<p>Hemos creado esta herramienta para transmitir por todos los canales posibles
+la demanda universal de justicia, dignidad y respeto por la vida de quienes hoy
+son perseguidas por militares profesionales y cuadrillas paramilitares a través
+de las calles de El Aaiún.  Entre todas las que usemos esta herramienta podemos
+colaborar para exigir al Europarlamento que se pronuncie. Si reciben cientos de
+miles de correos no podrán silenciarnos.</p>
 
 
 <p>Propuestas a tener en cuenta en la redacción de tu mensaje:
    <ul>
-       <li>Explícales brevemente con tus propias palabras lo que está sucediendo, cuéntales como te sientes y que deberían hacer en tu nombre.</li>
-       <li>Pídeles que le exijan al gobierno marroquí el cese de la violencia que está ejerciendo contra la población saharaui en los Territorios Ocupados del Sáhara Occidental.</li>
+       <li>Explícales brevemente con tus propias palabras lo que está sucediendo,
+           cuéntales como te sientes y qué deberían hacer en tu nombre.</li>
+       <li>Pídeles que le exijan al gobierno marroquí el cese de la violencia
+           que está ejerciendo contra la población saharaui en los Territorios
+           Ocupados del Sáhara Occidental.</li>
+       <li>Exígeles que se pronuncien ante el Parlamento Europeo, demandando la intervención de éste y del resto de la comunidad internacional.</li>
+       <li>Pídeles que exijan la liberación inmediata de los y las saharauis detenidos ilegalmente, hay cientos de personas desaparecidas-detenidas.</li>
        <li>Explícales con tus propias palabras que la ONU debe de tomar cartas en el asunto haciendo cumplir el artículo 2 de la Declaración Universal de los Derechos Humanos, así como las resoluciones adoptadas para los Territorios No Autónomos.</li>
        <li>Explícales que deben pedir a la ONU que el Consejo de Seguridad otorgue a la MINURSO la capacidad de monitorizar los Derechos Humanos, informando directamente al Consejo de Seguridad.</li>
        <li>Recuérdales que la ONU tiene la obligación de proteger a la población de un Territorio No Autónomo, mientras permanecen a la espera de la celebración del Referéndum de Autodeterminación, en conformidad con las Resoluciones de la Asamblea General, del Consejo de Seguridad y de la Unión Africana.</li>
        <li>Reclama al Gobierno de Zapatero que detenga de inmediato la venta de armas al gobierno alauita, con las que el ejército de ocupación asesina, tortura y reprime al pueblo saharaui.</li>
        <li>Pídeles que alcen la voz para permitir la entrada de civiles que puedan hacer la labor de observación internacional, al igual que libre acceso a la prensa.</li>
-       <li>Exígeles que se pronuncien ante el Parlamento Europeo, demandando la intervención de éste y del resto de la comunidad internacional.</li>
-       <li>Pídeles que exijan la liberación inmediata de las saharauis detenidas ilegalmente, hay cientos de personas desaparecidas-detenidas.</li>
    </ul>
 </p>
