--- a/app/views/site/index.en.html.erb
+++ b/app/views/site/index.en.html.erb
@@ -14,7 +14,7 @@ the rights of the Sahrawi people.</b></p>
 <p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" />
 This is an emergency campaign to demand your country's MEPs to act immediately
 for the Western Sahara: <%= link_to "By filling this form", message_path %> you
-will send an e-mail to your country's representatives in the European Parliament
+will send automatically an e-mail to your country's representatives in the European Parliament
 in your own language.  The aim of this tool is to allow you to reach every MEP
 with a unique message written by yourself (i.e. not using "copy&amp;paste").  
 Please write in a simple and natural way, and most importantly, do it with 
