--- a/app/views/site/index.es.html.erb
+++ b/app/views/site/index.es.html.erb
@@ -14,7 +14,7 @@ pueblo saharaui.</b></p>
 <p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" />
 Esta es una campaña de emergencia para exigir a los Europarlamentarios de tu
 país que actúen inmediatamente por el Sáhara: rellenando 
-<a href="http://www.sahararights.net/message">este formulario</a> enviarás un
+<a href="http://www.sahararights.net/message">este formulario</a> enviarás automáticamente un
 correo a las/los representantes de tu país en el Parlamento Europeo en tu
 propia lengua.  El objetivo de esta herramienta es que la europarlamentaria
 o el europarlamentario en cuestión reciba un mensaje único y escrito con tus
@@ -23,7 +23,8 @@ sencilla y natural y sobre todo, por favor, hazlo con mucho respeto y claridad,
 sólo así nos harán caso.</p>
 
 <p>Una vez rellenado el formulario, tu texto será enviado a las cuentas de
-correo de los/as representantes de tu país en el Parlamento Europeo.</p>
+correo de los/as representantes de tu país en el Parlamento Europeo.
+Recibirás un mensaje de confirmación para validar tu mensaje.</p>
 
 <p>También puedes copiar este pequeño 
 <a href="http://www.sahararights.net/integrate">código HTML</a> y pegarlo en
