--- a/app/views/site/index.fr.html.erb
+++ b/app/views/site/index.fr.html.erb
@@ -2,26 +2,73 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "Remplisant ce formulaire", message_path %> enverras un courriel à l'/ les représentants de  votre pays au Parlement européen dans votre propre langue. S'il vous  plaît faire-le avec respect et clarté. Le but de cette utile est que le  député ou la députée en question, de recevoir un message écrit dans vos  propres mots, sans utiliser le "copier-coller."</p>
+<p><b>Envoyez un message à vos représentants au
+Parlement Européen en leur demandant qu'ils se prononcent immédiatement
+pour exiger au Maroc le respect des droits du peuple sahraoui.</b></p>
 
-<p>Le 10 Octobre une grande protestation pacifique a commencé, dans  laquelle plus de 20.000 sahraouis fait valoir leur droit au travail, à  la non-discrimination et l'utilisation de ses ressources naturelles et  avec l'établissement d'un camp Haimas 7000 à 15 kilomètres de la ville  de Laayoune.
-30 jours après le gouvernement marocain a ordonné l'assaut de l'armée et  la destruction des Iziko Agdaym sahraoui camp. Il ya eu 28 personnes  tuées, 723 blessés et 159 disparus, sans compter ceux de la caserne  militaire ou de prison, ou dans les hôpitaux.</p>
+<ul>
+<li>Envoyez  <a href="http://sahararights.net/message">votre
+message</a></li>
+<li><a href="http://sahararights.net/integrate">Incorporez</a> le
+formulaire dans votre website</li>
+</ul>
 
-<p>Dans le même temps, les forces d'occupation ont provoqué et armé aux  colons dans la ville de Laayoune que, en collaboration avec des  policiers en civil, volent les maisons, les entreprises et brûlent les  voitures possédés par des Sahraouis. L'armée marocaine a déclaré un état  de siège dans les territoires occupés du Sahara occidental.</p>
 
-<p>Il n'existe aucune option de silence comme il n'existe aucune  possibilité d'arrêter les justes revendications du peuple sahraoui. Ce  qui existe est la capacité de protéger ceux qui sont victimes de la  répression. Nous avons donc créé cet outil pour transmettre par tous les  moyens possibles la demande universel de la justice, la dignité et le  respect de la vie de ceux qui, aujourd'hui, sont persécutés par les  gangs professionnels militaires et paramilitaires dans les rues de  Laayoune. Parmi tous qui utilisons cet outil pouvons travailler ensemble  à demander le Parlement européen de se prononcer.</p>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" />
+Cette-ci est une campagne d'émergence pour exiger aux parlementaires
+européens de votre pays qu'ils agissent immédiatement pour le Sahara.
+Remplissant <a href="http://www.sahararights.net/message">ce
+formulaire</a> enverras un courriel aux représentants de votre
+pays au Parlement Européen en votre propre langue. Le but de cette
+utile est que le député ou la députée en question reçoit un
+message écrit dans vos propres mots, sans utiliser le "copier-coller."
+Écrivez de forme simple et naturelle, et surtout s'il vous plaît
+faire-le avec respect et clarté.  Seulement de cette manière ils vont écouter ce que vous
+avez à dire.</p>
+
+<p>Une fois que le formulaire soit rempli, votre texte sera transmis aux
+comptes e-mail des représentants de votre pays au Parlement Européen.
+Vous recevrez un e-mail de confirmation pour valider votre message.</p>
+
+<p>En outre, vous pouvez copier ce bout de code HTML et collez-le dans votre site
+Web pour intégrer le formulaire. De cette façon, nous pouvons être des milliers
+de webs et blogs appelant à cette action.</p>
+
+<p>Nous avons donc créé cet outil pour transmettre par tous les moyens
+possibles la demande universel de la justice, la dignité et le respect
+de la vie de ceux qui, aujourd'hui, sont persécutés par les forces
+militaires et paramilitaires dans les rues de Laayoune.
+Parmi tous qui utilisons cet outil pouvons travailler ensemble à
+demander le Parlement Européen de se prononcer. On ne peut pas passer
+sous silence des milliers de courriels.</p>
 
 
-<p>Les propositions à prendre en considération dans la rédaction de votre message:
-   <ul>
-      <li>Expliquez brièvement en vos propres mots ce qui se passe,  dites-leur comment vous vous sentez et ce qu'ils devraient faire en  votre nom.</li>
-      <li>Demandez-leur exiger au gouvernement marocain la cessation de la  violence exercée contre la population sahraouie dans les territoires  occupés du Sahara occidental.</li>
-      <li>Expliquez dans vos propres mots que l'ONU doit prendre des mesures  en cette question par l'application de l'article 2 de la Déclaration  universelle des droits de l'homme, et des résolutions adoptées pour les  Territoires pas Autonommes.</li>
-      <li>Expliquez-leur qu'ils devraient demander à l'ONU que le Conseil de  sécurité donne au MINURSO la capacité de surveiller les droits de  l'homme, informant directement au Conseil de sécurité.</li>
-      <li>Rappelez-leur que les Nations Unies ont l'obligation de protéger  la population des territoires pas autonnomes, alors qu'ils sont en  attente de la célébration du référendum d'autodétermination conformément  aux résolutions de l'Assemblée générale, du Conseil de sécurité et de  l'Union Afrique.</li>
-      <li>Se plaindre au gouvernement de Zapatero à mettre fin immédiatement  à la vente d'armes au gouvernement alaouite, dont l'armée d'occupation  tue, torture et réprime le peuple sahraoui.</li>
-      <li>Demandez-leur de faire entendre leur voix afin de permettre  l'entrée des civils pour faire le travail des observateurs  internationaux, ainsi que l'accès libre à la presse.</li>
-      <li>Exige-leur de prendre la parole devant le Parlement européen,  demandant l'intervention de cela et le reste de la communauté  internationale.</li>
-      <li>Demandez-leur de exiger la libération immédiate des sahraouis  détenus illégalement, ily a des centaines de personnes disparues,  arrêtées.</li>
-   <ul>
-</p>
+<p>Quelques propositions à prendre en considération pendant la rédaction de votre
+message:</p>
+
+<ul>
+      <li>Expliquez brièvement en vos propres mots ce qui se passe,  dites-leur
+comment vous vous sentez et ce qu'ils devraient faire en  votre nom.</li>
+      <li>Demandez-leur exiger au gouvernement marocain la cessation de la 
+violence exercée contre la population sahraouie dans les territoires  occupés du
+Sahara occidental.</li>
+      <li>Exige-leur de prendre la parole devant le Parlement européen, 
+demandant l'intervention de cela et le reste de la communauté 
+internationale.</li>
+      <li>Demandez-leur de exiger la libération immédiate des sahraouis  détenus
+illégalement, ily a des centaines de personnes disparues,  arrêtées.</li>
+      <li>Expliquez dans vos propres mots que l'ONU doit prendre des mesures en
+cette question par l'application de l'article 2 de la Déclaration  universelle
+des droits de l'homme, et des résolutions adoptées pour les  Territoires pas
+Autonomes.</li>
+      <li>Expliquez-leur qu'ils devraient demander à l'ONU que le Conseil de 
+sécurité donne au MINURSO la capacité de surveiller les droits de  l'homme,
+informant directement au Conseil de sécurité.</li>
+      <li>Rappelez-leur que les Nations Unies ont l'obligation de protéger  la
+population des territoires pas autonnomes, alors qu'ils sont en  attente de la
+célébration du référendum d'autodétermination conformément  aux résolutions de
+l'Assemblée générale, du Conseil de sécurité et de  l'Union Afrique.</li>
+      <li>Demandez-leur de faire entendre leur voix afin de permettre  l'entrée
+des civils pour faire le travail des observateurs  internationaux, ainsi que
+l'accès libre à la presse.</li>
+</ul>
