Fixed some Italian typos. I suspect there are still some remaining.

--- a/app/views/pages/stats.it.html.erb
+++ b/app/views/pages/stats.it.html.erb
@@ -3,5 +3,5 @@
 <h2><%= link_to t(:stats), stats_path %></h2>
 
 <p>Adesso <%= @senders %> cittadini e cittadine della Unione Europea
-hanno inviato i loro messaggi ai nostri ripresentanti. Allora sono
+hanno inviato i loro messaggi ai nostri rappresentanti. Allora sono
 <%= @messages %> i messaggi consegnati al Parlamento Europeo.</p>
